# research-orchestrator

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  orchestrator  pyproject.toml  requirements-dev.txt
configs/: agent_loop.yaml  default.rules  pivot_policy.yaml  review_policy.yaml  stage_transitions.yaml
docs/: API_WEB_SEARCH.md  CODEX_MCP_SETUP.md  RELATED_WORK.md  TOPIC_ENGINE.md  bibliography.bib
example/: idea_examples.jsonl
mcp_server/: README.md  server.py  tool_manifest.yaml
playbook/: playbook_entry_template.yaml
prompts/: challenger.md  idea_generation.md  reviewer_code.md  reviewer_redteam.md  reviewer_research.md
resorch/: __main__.py  agent_loop.py  artifacts.py  autopilot.py  autopilot_action.py  autopilot_config.py  autopilot_digests.py  autopilot_git.py  autopilot_pivot.py  autopilot_planner.py  autopilot_review.py  claims.py  cli.py  codex_runner.py  cohort.py  constraints.py  db_inventory.py  doctor.py  evidence_store.py  goal_alignment.py  idea_bank.py  idea_dedupe.py  idea_launcher.py  ideas.py  interpretation_challenger.py  jobs.py  ledger.py  manuscript_checker.py  openai_tools.py  paths.py  playbook_extractor.py  playbook_store.py  portfolio.py  projects.py  retrieval.py  reviews.py  smoke_tests.py  stage_gates.py  submission_verifier.py  summary_ingest.py  (+8 more)
review/: README.md  review_packet_template.md  review_request.schema.json  review_result.schema.json
rubrics/: idea_score_rubric.yaml  stage_gate_rubric.yaml
schemas/: autopilot_plan.schema.json  (+4 more)
(+93 files in other folders)
